feat: Remove favicon.ico file from the project

--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luxe Interiors - Premium Interior Design Studio</title>
-    <meta name="description" content="Transform your space with Luxe Interiors. Award-winning interior design studio specializing in residential and commercial spaces." />
-    <meta name="author" content="Luxe Interiors" />
+    <title>Epique Interiors - Luxury Interior Design & Architecture</title>
+    <meta name="description" content="Transform your space with Epique Interiors' bespoke interior design and architectural services. Specializing in timeless elegance and modern luxury designs." />
+    <meta name="author" content="Epique Interiors" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Luxe Interiors - Premium Interior Design Studio" />
-    <meta property="og:description" content="Transform your space with Luxe Interiors. Award-winning interior design studio specializing in residential and commercial spaces." />
+    <meta property="og:title" content="Epique Interiors - Luxury Interior Design & Architecture" />
+    <meta property="og:description" content="Transform your space with Epique Interiors' bespoke interior design and architectural services. Specializing in timeless elegance and modern luxury designs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
